Updates for 1.15 firmware in linux-firmware
The 1.15 firmware is publicaly available in the linux-firmware project.
Make updates to be compatible with that version. Firmware versions
following 1.15 are to be backwards compatible. This will break the
existing support with the proprietary 1.9.2 firmware.

Signed-off-by: Ashish Kumar <quic_ashikum@quicinc.com>
Signed-off-by: Jeffrey Hugo <quic_jhugo@quicinc.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,6 @@
+## Copyright (c) 2023-2024 Qualcomm Innovation Center, Inc. All rights reserved.
+## SPDX-License-Identifier: BSD-3-Clause-Clear
+
 cmake_minimum_required (VERSION 3.24)
 include(FetchContent)
 include(${CMAKE_SOURCE_DIR}/cmake/compiler_warnings.cmake)
@@ -9,10 +12,9 @@ project (AicOpenRuntime
 	  VERSION 1.0
 	  )
 
-
-
-
-
+set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
+set(THREADS_PREFER_PTHREAD_FLAG TRUE)
+find_package(Threads REQUIRED)
 
 add_subdirectory(inc)
 add_subdirectory(thirdparty-modules)
